--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					<div class="container">
 						<header>
 							<h2 style="color: white; font-size:60px;">Juntos es mejor</h2>
-							<p style="color:black; font-size:20px;">Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<p style="color:black; font-size:20px;">Ingresa tu correo para estar al tanto de tus emociones...</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
